--- a/wiki_recipenew/package.json
+++ b/wiki_recipenew/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://dci-dusseldorf.github.io/wiki_recipenew",
   "name": "wiki_recipenew",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "popper": "^1.0.1",
@@ -23,6 +25,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
